clients/ios/SsdidDrive/Frameworks/KazSignNative.xcframework/macos-arm64_x86_64/Headers/sign.h


/* ============================================================================
 * Runtime Security Level Selection (NEW in 2.1)
 * ============================================================================ */

/**
 * Security level enumeration for runtime selection
 */
typedef enum {
    KAZ_LEVEL_128 = 128,    /* 128-bit security (SHA-256) */
    KAZ_LEVEL_192 = 192,    /* 192-bit security (SHA-384) */
    KAZ_LEVEL_256 = 256     /* 256-bit security (SHA-512) */
} kaz_sign_level_t;


/**
 * Security level parameters (read-only, for introspection)
 */
typedef struct {
    int level;                  /* Security level (128, 192, 256) */
    const char *algorithm_name; /* Algorithm name string */
    size_t secret_key_bytes;    /* Secret key size */
    size_t public_key_bytes;    /* Public key size */
    size_t hash_bytes;          /* Hash output size */
    size_t signature_overhead;  /* Signature size without message */
    size_t s_bytes;             /* s component size */
    size_t t_bytes;             /* t component size */
    size_t s1_bytes;            /* S1 component size */
    size_t s2_bytes;            /* S2 component size */
    size_t s3_bytes;            /* S3 component size */
} kaz_sign_level_params_t;


/**
 * Get parameters for a security level
 *
 * @param level  Security level (KAZ_LEVEL_128, KAZ_LEVEL_192, or KAZ_LEVEL_256)
 * @return Pointer to level parameters, or NULL if invalid level
 */
const kaz_sign_level_params_t *kaz_sign_get_level_params(kaz_sign_level_t level);

/* ============================================================================
 * Error Codes
 * ============================================================================ */

#define KAZ_SIGN_SUCCESS           0
#define KAZ_SIGN_ERROR_MEMORY     -1
#define KAZ_SIGN_ERROR_RNG        -2
#define KAZ_SIGN_ERROR_INVALID    -3
#define KAZ_SIGN_ERROR_VERIFY     -4

/* ============================================================================
 * Random State Management
 * ============================================================================ */

/**
 * Initialize the global random state with proper entropy
 * MUST be called before any signing operations
 *
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_init_random(void);


/**
 * Clear and free the global random state
 * Should be called when done with signing operations
 */
void kaz_sign_clear_random(void);


/**
 * Check if random state has been initialized
 *
 * @return 1 if initialized, 0 otherwise
 */
int kaz_sign_is_initialized(void);


/* ============================================================================
 * Core KAZ-SIGN API
 * ============================================================================ */

/**
 * Generate a KAZ-SIGN key pair
 *
 * @param pk  Output: public verification key (KAZ_SIGN_PUBLICKEYBYTES bytes)
 * @param sk  Output: secret signing key (KAZ_SIGN_SECRETKEYBYTES bytes)
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_keypair(unsigned char *pk, unsigned char *sk);


/**
 * Sign a message
 *
 * @param sig      Output: signature (KAZ_SIGN_SIGNATURE_OVERHEAD + mlen bytes)
 * @param siglen   Output: length of signature
 * @param msg      Input: message to sign
 * @param msglen   Input: length of message
 * @param sk       Input: secret signing key
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_signature(unsigned char *sig,
                       unsigned long long *siglen,
                       const unsigned char *msg,
                       unsigned long long msglen,
                       const unsigned char *sk);


/**
 * Verify a signature and extract the message
 *
 * @param msg      Output: extracted message
 * @param msglen   Output: length of extracted message
 * @param sig      Input: signature (signature || message)
 * @param siglen   Input: length of signature
 * @param pk       Input: public verification key
 * @return KAZ_SIGN_SUCCESS if valid, KAZ_SIGN_ERROR_VERIFY if invalid
 */
int kaz_sign_verify(unsigned char *msg,
                    unsigned long long *msglen,
                    const unsigned char *sig,
                    unsigned long long siglen,
                    const unsigned char *pk);


/**
 * Hash a message using the appropriate hash function for the security level
 *
 * @param msg     Input: message to hash
 * @param msglen  Input: length of message
 * @param hash    Output: hash value (KAZ_SIGN_BYTES bytes)
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_hash(const unsigned char *msg,
                  unsigned long long msglen,
                  unsigned char *hash);


/* ============================================================================
 * Version API
 * ============================================================================ */

/**
 * Get the version string
 *
 * @return Version string (e.g., "2.0.0")
 */
const char *kaz_sign_version(void);


/**
 * Get the version number as integer
 *
 * @return Version number (major * 10000 + minor * 100 + patch)
 */
int kaz_sign_version_number(void);


/* ============================================================================
 * Runtime Security Level API (NEW in 2.1)
 *
 * These functions allow selecting the security level at runtime.
 * Use these for applications that need to support multiple security levels.
 * ============================================================================ */

/**
 * Initialize the library for a specific security level
 * Can be called multiple times with different levels.
 *
 * @param level  Security level (KAZ_LEVEL_128, KAZ_LEVEL_192, or KAZ_LEVEL_256)
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_init_level(kaz_sign_level_t level);


/**
 * Clear resources for a specific security level
 *
 * @param level  Security level to clear
 */
void kaz_sign_clear_level(kaz_sign_level_t level);


/**
 * Clear resources for all security levels
 */
void kaz_sign_clear_all(void);


/**
 * Generate a key pair for a specific security level
 *
 * @param level  Security level
 * @param pk     Output: public key (size from kaz_sign_get_level_params)
 * @param sk     Output: secret key (size from kaz_sign_get_level_params)
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_keypair_ex(kaz_sign_level_t level,
                        unsigned char *pk,
                        unsigned char *sk);


/**
 * Sign a message with a specific security level
 *
 * @param level   Security level
 * @param sig     Output: signature (overhead + msglen bytes)
 * @param siglen  Output: length of signature
 * @param msg     Input: message to sign
 * @param msglen  Input: length of message
 * @param sk      Input: secret key
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_signature_ex(kaz_sign_level_t level,
                          unsigned char *sig,
                          unsigned long long *siglen,
                          const unsigned char *msg,
                          unsigned long long msglen,
                          const unsigned char *sk);


/**
 * Verify a signature with a specific security level
 *
 * @param level   Security level
 * @param msg     Output: extracted message
 * @param msglen  Output: length of extracted message
 * @param sig     Input: signature
 * @param siglen  Input: length of signature
 * @param pk      Input: public key
 * @return KAZ_SIGN_SUCCESS if valid, KAZ_SIGN_ERROR_VERIFY if invalid
 */
int kaz_sign_verify_ex(kaz_sign_level_t level,
                       unsigned char *msg,
                       unsigned long long *msglen,
                       const unsigned char *sig,
                       unsigned long long siglen,
                       const unsigned char *pk);


/**
 * Hash a message with the hash function for a specific security level
 *
 * @param level   Security level
 * @param msg     Input: message to hash
 * @param msglen  Input: length of message
 * @param hash    Output: hash value (size from kaz_sign_get_level_params)
 * @return KAZ_SIGN_SUCCESS on success, error code otherwise
 */
int kaz_sign_hash_ex(kaz_sign_level_t level,
                     const unsigned char *msg,
                     unsigned long long msglen,
                     unsigned char *hash);