clients/ios/SsdidDrive/Frameworks/KazSignNative.xcframework/ios-arm64/Headers/kdf.h


/* ============================================================================
 * HKDF Functions (RFC 5869)
 * ============================================================================ */

/**
 * HKDF-Extract: Extract a pseudorandom key from input keying material.
 *
 * PRK = HMAC-Hash(salt, IKM)
 *
 * @param salt      Optional salt value (can be NULL, uses zeros)
 * @param salt_len  Length of salt
 * @param ikm       Input keying material
 * @param ikm_len   Length of IKM
 * @param prk       Output: pseudorandom key (hash_len bytes)
 * @param prk_len   Output: length of PRK written
 * @return          KAZ_KDF_SUCCESS on success, error code otherwise
 */
int kaz_hkdf_extract(const unsigned char *salt, size_t salt_len,
                     const unsigned char *ikm, size_t ikm_len,
                     unsigned char *prk, size_t *prk_len);


/**
 * HKDF-Expand: Expand pseudorandom key into output keying material.
 *
 * OKM = T(1) || T(2) || ... || T(N)
 * where T(i) = HMAC-Hash(PRK, T(i-1) || info || i)
 *
 * @param prk       Pseudorandom key from HKDF-Extract
 * @param prk_len   Length of PRK
 * @param info      Optional context/application-specific info
 * @param info_len  Length of info
 * @param okm       Output: output keying material
 * @param okm_len   Desired length of OKM
 * @return          KAZ_KDF_SUCCESS on success, error code otherwise
 */
int kaz_hkdf_expand(const unsigned char *prk, size_t prk_len,
                    const unsigned char *info, size_t info_len,
                    unsigned char *okm, size_t okm_len);


/**
 * HKDF: Combined Extract-and-Expand operation.
 *
 * Convenience function that performs both steps.
 *
 * @param salt      Optional salt value
 * @param salt_len  Length of salt
 * @param ikm       Input keying material
 * @param ikm_len   Length of IKM
 * @param info      Optional context info
 * @param info_len  Length of info
 * @param okm       Output: output keying material
 * @param okm_len   Desired length of OKM
 * @return          KAZ_KDF_SUCCESS on success, error code otherwise
 */
int kaz_hkdf(const unsigned char *salt, size_t salt_len,
             const unsigned char *ikm, size_t ikm_len,
             const unsigned char *info, size_t info_len,
             unsigned char *okm, size_t okm_len);